<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/currency"
        android:textColor="@color/green"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/from"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Spinner
        android:id="@+id/spinnerFromCurrency"
        android:layout_width="126dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewFrom"
        app:layout_constraintStart_toEndOf="@+id/textViewFrom"
        app:layout_constraintTop_toTopOf="@+id/textViewFrom" />

    <TextView
        android:id="@+id/textViewTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/to"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFrom" />

    <Spinner
        android:id="@+id/spinnerToCurrency"
        android:layout_width="126dp"
        android:layout_height="55dp"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewTo"
        app:layout_constraintStart_toStartOf="@+id/spinnerFromCurrency"
        app:layout_constraintTop_toTopOf="@+id/textViewTo" />

    <Button
        android:id="@+id/okBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/transparent"
        android:text="@string/ok"
        android:textColor="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerToCurrency" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/transparent"
        android:text="@string/cancel"
        android:textColor="@color/green"
        app:layout_constraintEnd_toStartOf="@id/okBtn"
        app:layout_constraintTop_toBottomOf="@+id/spinnerToCurrency" />
</androidx.constraintlayout.widget.ConstraintLayout>